# PH-Map

./: .gitignore  ARCHITECTURE.md  BUILD_SUMMARY.md  CONFIG_FINAL.md  INSTALL.md  INSTALLATION.md  INSTALL_FIX.md  LICENSE  MANIFEST.in  README.md  STARTUP_INFO.md  VERIFY_SETUP.md  _startup.py  pyproject.toml  requirements.txt  version.py
core/: __init__.py  classifier.py  predictor.py
models/: __init__.py  __model_registry__.py
notebooks/: example_for_real_dataset.ipynb  quick_start.ipynb  reference_mapping_example1.ipynb  reference_mapping_example2.ipynb
phmap.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
pl/: __init__.py  plotting.py  sankey.py
utils/: __init__.py
