[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "phmap"
version = "0.1.0"
description = "PH-Map: Multi-task cell type classification package for single-cell RNA sequencing data"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "PH-Map Team"}
]
keywords = ["single-cell", "RNA-seq", "cell type classification", "multi-task learning"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "torch>=2.0.0",
    "scanpy>=1.9.0",
    "pandas>=1.5.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "anndata>=0.9.0",
    "scipy>=1.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "flake8>=4.0.0",
]

[tool.setuptools]
# Let setup.py handle packages configuration
# packages will be defined in setup.py

[tool.setuptools.package-data]
phmap = [
    "models/full_model/*.pth",
    "models/full_model/*.pkl",
]
